Fix telegram button spacing

--- a/src/styles/_telegram.scss
+++ b/src/styles/_telegram.scss
@@ -1,5 +1,10 @@
 .telegram--button {
+    padding: 2rem;
+}
+
+.telegram--button--container {
     position: relative;
+    display: inline-block;
     width: 25rem;
 }
 
